[gd_scene load_steps=13 format=3 uid="uid://bkti8u3cu1usy"]

[ext_resource type="Script" path="res://scripts/player1.gd" id="1_oedea"]
[ext_resource type="Script" path="res://scripts/Button.gd" id="2_66fn8"]
[ext_resource type="Script" path="res://scripts/player2.gd" id="2_b8mbd"]
[ext_resource type="Texture2D" uid="uid://skkv1v034hqk" path="res://sprites/New Piskel-1.png.png bolinha.png" id="2_toaby"]
[ext_resource type="Script" path="res://scripts/bola.gd" id="4_gdwpm"]
[ext_resource type="Script" path="res://scripts/Score.gd" id="5_5xao3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gskbm"]
radius = 11.0
height = 216.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u4l2w"]
radius = 20.2237

[sub_resource type="CircleShape2D" id="CircleShape2D_skcel"]
radius = 17.0294

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ay15d"]
size = Vector2(967, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5xeq"]
size = Vector2(991, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vuwr"]
size = Vector2(34, 544)

[node name="MultiPlayer" type="Node2D"]

[node name="player1" type="StaticBody2D" parent="." groups=["Pad"]]
position = Vector2(5, 2)
script = ExtResource("1_oedea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player1"]
position = Vector2(18, 285)
shape = SubResource("CapsuleShape2D_gskbm")

[node name="player2" type="StaticBody2D" parent="." groups=["Pad"]]
position = Vector2(9, 2)
script = ExtResource("2_b8mbd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
position = Vector2(928, 272)
shape = SubResource("CapsuleShape2D_gskbm")

[node name="volta menu" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Voltar ao Menu "
script = ExtResource("2_66fn8")

[node name="bola" type="CharacterBody2D" parent="."]
position = Vector2(463, 262)
script = ExtResource("4_gdwpm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola"]
position = Vector2(-2, 3)
shape = SubResource("CircleShape2D_u4l2w")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="bola"]
position = Vector2(76, -129)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola/Area2D"]
position = Vector2(-80, 132)
shape = SubResource("CircleShape2D_skcel")

[node name="Sprite2D" type="Sprite2D" parent="bola"]
position = Vector2(13, 17)
scale = Vector2(5.25, 4.03125)
texture = ExtResource("2_toaby")
metadata/_edit_group_ = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="bola"]
position = Vector2(0, 12)
amount = 50
gravity = Vector2(0, 0)
scale_amount_max = 4.0
metadata/_edit_group_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(484, -30)
shape = SubResource("RectangleShape2D_ay15d")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(496, 568)
shape = SubResource("RectangleShape2D_l5xeq")

[node name="Score" type="Node2D" parent="."]
position = Vector2(49, 65)
script = ExtResource("5_5xao3")

[node name="Player1Score" type="Label" parent="Score"]
offset_left = 159.0
offset_top = -58.0
offset_right = 236.0
offset_bottom = -30.0
text = "0000000"

[node name="Player2Score" type="Label" parent="Score"]
offset_left = 761.0
offset_top = -59.0
offset_right = 825.0
offset_bottom = -36.0
text = "0000000"

[node name="AreaLeft" type="Area2D" parent="."]
position = Vector2(-14, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2(-1, 252)
shape = SubResource("RectangleShape2D_6vuwr")

[node name="AreaRight" type="Area2D" parent="AreaLeft"]
position = Vector2(997, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft/AreaRight"]
position = Vector2(-2, 263)
shape = SubResource("RectangleShape2D_6vuwr")

[connection signal="pressed" from="volta menu" to="player1" method="_on_volta_menu_pressed"]
[connection signal="area_entered" from="bola/Area2D" to="bola" method="_on_area_2d_area_entered"]
